some edit for about page

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -76,5 +76,6 @@
       ]
     }
   },
-  "Copyright": " © النادي الليبي لليخوت - جميع الحقوق محفوظة"
+  "Copyright": " © النادي الليبي لليخوت - جميع الحقوق محفوظة",
+  "Advertisements": "اعلانات النادي الليبي لليخوت"
 }
