last update enshaallh

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -72,7 +72,7 @@
       "title": "⛵ LYC  ما وراء تسمية النادي الليبي لليخوت ",
       "content": [
         "سبب تسمية نادينا ترجع تيمناً باسم أول نادي شراع في العالم. يُعد هذا الاسم مشهوراً جداً حيث لا تخلو دولة أو مدينة من نادي شراع يحمل اسم \"نادي اليخوت\". تأسياً بكل نوادي الإبحار والقوارب الشراعية حول العالم، أطلقنا هذا الاسم منذ تأسيس النادي في عام 2015 بمدينة طرابلس.",
-        "كما أن كلمة \"يخت\" في الأصل مشتقة من الكلمة الهولندية (jacht) التي تعني المطاردة، وكانت تُستخدم للإشارة إلى سفن الإبحار السريعة التي استُخدمت سابقاً من البحرية الهولندية لمطاردة القراصنة واعتقالهم. لاحقاً، أصبحت تصنيفاً للقوارب المستخدمة في المسابقات والإبحار بالمراكب الشراعية بعيداً عن الصورة النمطية التي تربط اليخوت بالقوارب الفاخرة أو البخارية الكبيرة فقط."
+        "كما أن كلمة \"يخت\" في الأصل مشتقة من الكلمة الهولندية (yacht) التي تعني المطاردة، وكانت تُستخدم للإشارة إلى سفن الإبحار السريعة التي استُخدمت سابقاً من البحرية الهولندية لمطاردة القراصنة واعتقالهم. لاحقاً، أصبحت تصنيفاً للقوارب المستخدمة في المسابقات والإبحار بالمراكب الشراعية بعيداً عن الصورة النمطية التي تربط اليخوت بالقوارب الفاخرة أو البخارية الكبيرة فقط."
       ]
     }
   },
