--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -73,7 +73,7 @@
       "title": "⛵ LYC - The Story Behind the Name of the Libyan Yacht Club",
       "content": [
         "The name of our club is inspired by the world’s first sailing club. This name is very popular, as almost every country or city has a sailing club bearing the name 'Yacht Club.' Following the example of sailing and yacht clubs around the world, we adopted this name since the club's establishment in 2015 in Tripoli.",
-        "Additionally, the word 'yacht' originally derives from the Dutch word (jacht), meaning 'hunt.' It was used to refer to fast sailing ships previously employed by the Dutch Navy to chase and capture pirates. Later, it became a classification for boats used in competitions and sailing, moving away from the stereotypical association of yachts with only large, luxurious, or steam-powered boats."
+        "Additionally, the word 'yacht' originally derives from the Dutch word (yacht), meaning 'hunt.' It was used to refer to fast sailing ships previously employed by the Dutch Navy to chase and capture pirates. Later, it became a classification for boats used in competitions and sailing, moving away from the stereotypical association of yachts with only large, luxurious, or steam-powered boats."
       ]
     }
   },
