--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -77,5 +77,6 @@
     }
   },
   "Copyright": " © النادي الليبي لليخوت - جميع الحقوق محفوظة",
-  "Advertisements": "اعلانات النادي الليبي لليخوت"
+  "Advertisements": "اعلانات النادي الليبي لليخوت",
+  "clubName": "النادي الليبي لليخوت "
 }
