--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -78,5 +78,6 @@
     }
   },
   "Copyright": "© Libyan Yacht Club - All Rights Reserved",
-  "Advertisements": "Libyan Yacht Club Announcements"
+  "Advertisements": "Libyan Yacht Club Announcements",
+  "clubName": "Libyan Yacht Club"
 }
