--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -11,7 +11,7 @@
   },
 
   "content": {
-    "clubName": "النادي الليبي لليخوت - LIBYAN YACHT CLUB",
+    "clubName": "  Libyan Yacth Club   النادي الليبي لليخوت ",
     "description1": "نادي اهلي متخصص في الرياضات والألعاب البحرية",
     "description2": "تأسس في عام 2015 بمدينة طرابلس",
     "moreButton": "المزيد"
@@ -78,5 +78,6 @@
   },
   "Copyright": " © النادي الليبي لليخوت - جميع الحقوق محفوظة",
   "Advertisements": "اعلانات النادي الليبي لليخوت",
-  "clubName": "النادي الليبي لليخوت "
+  "clubName": "النادي الليبي لليخوت ",
+  "address": "كورنيش حي الاندلس جزيرة الفوز، طرابلس، ليبيا "
 }
